# Data-Structures-and-Algorithms

./: CMakeLists.txt  Makefile  README.md  menu.h
Laboratory1/: CMakeLists.txt  main.c
Laboratory1/libraries/: array.h  menu.h
Laboratory2/: CMakeLists.txt  main.c
Laboratory3/: CMakeLists.txt  main.c
Laboratory4/: CMakeLists.txt  main.c
Laboratory5/: CMakeLists.txt  main.c
Laboratory6/: CMakeLists.txt  main.c
libraries/: array.h  menu.h  read.h
libraries/array/: CMakeLists.txt  array.c  array.h
libraries/menu/: CMakeLists.txt  menu.c  menu.h
libraries/read/: CMakeLists.txt  read.c  read.h
